feat: add version to yaml

--- a/bricks/riverpod_skeleton/brick.yaml
+++ b/bricks/riverpod_skeleton/brick.yaml
@@ -1,5 +1,6 @@
 name: riverpod_skeleton
 description: A brick to create a skeleton Flutter app with Riverpod.
+version: 0.0.1
 vars:
   - app_name
   - description
