--- a/bricks/riverpod_skeleton/__brick__/{{#snakeCase}}{{app_name}}{{/snakeCase}}/pubspec.yaml
+++ b/bricks/riverpod_skeleton/__brick__/{{#snakeCase}}{{app_name}}{{/snakeCase}}/pubspec.yaml
@@ -1,31 +1,37 @@
 name: {{#snakeCase}}{{app_name}}{{/snakeCase}}
 description: {{description}}
-
-# Prevent accidental publishing to pub.dev.
 publish_to: "none"
 
-version: 1.0.0+1
+version: 0.1.0+1
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: 2.5.0-5.2.pre
 
 dependencies:
   flutter:
     sdk: flutter
+  flutter_hooks: ^0.18.2+1
   flutter_localizations:
     sdk: flutter
-  flutter_riverpod: ^1.0.0-dev.7
   freezed_annotation: ^0.14.3
-  riverpod: ^1.0.0-dev.7
+  go_router: ^3.0.1
+  hooks_riverpod: ^1.0.3
+  intl: ^0.17.0
+  logging: ^1.0.2
+  logs:
+    git:
+      url: https://github.com/amitkot/base_flutter_packages
+      path: packages/logs
+  riverpod: ^1.0.3
+  state_notifier: ^0.7.1
 
 dev_dependencies:
-  build_runner: ^2.1.2
-  flutter_gen_runner: ^3.1.2
+  build_runner: ^2.1.7
+  flutter_gen_runner: ^4.1.5
   flutter_test:
     sdk: flutter
-  freezed: ^0.14.5
-  very_good_analysis: ^2.3.0
+  freezed: ^1.1.1
+  lint: ^1.0.0
 
 flutter:
   uses-material-design: true
